// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LabeledStatement > client > should skip server labeled statements in non-async functions 1`] = `
"const example = () => {
  foo: {
    'use server';
    doStuff();
  }
};"
`;

exports[`LabeledStatement > client > should skip top-level values for scope 1`] = `
"import { $$server as _$$server } from "use-server-directive/client";
const value = 'foo bar';
const _server = _$$server("/__server/bb5fd6ee-example-0-anonymous");
foo: {
  const [_type, _result, _mutations] = await _server();
  if (_type === 4) {
    throw _result;
  }
}"
`;

exports[`LabeledStatement > client > should transform break statements 1`] = `
"import { $$server as _$$server } from "use-server-directive/client";
const _server = _$$server("/__server/bb5fd6ee-example-0-anonymous");
foo: {
  const [_type, _result, _mutations] = await _server();
  if (_type === 0) {
    if (_result === "foo") {
      break foo;
    }
  } else if (_type === 4) {
    throw _result;
  }
}"
`;

exports[`LabeledStatement > client > should transform valid server functions with scope 1`] = `
"import { $$server as _$$server } from "use-server-directive/client";
const _server = _$$server("/__server/bb5fd6ee-example-0-foo");
async function foo() {
  const value = 'foo bar';
  foo: {
    const [_type, _result, _mutations] = await _server();
    if (_type === 4) {
      throw _result;
    }
  }
}"
`;

exports[`LabeledStatement > client > should transform valid server labeled statements 1`] = `
"import { $$server as _$$server } from "use-server-directive/client";
const _server = _$$server("/__server/bb5fd6ee-example-0-anonymous");
foo: {
  const [_type, _result, _mutations] = await _server();
  if (_type === 4) {
    throw _result;
  }
}"
`;

exports[`LabeledStatement > server > should skip server labeled statements in non-async functions 1`] = `
"const example = () => {
  foo: {
    'use server';
    doStuff();
  }
};"
`;

exports[`LabeledStatement > server > should skip top-level values for scope 1`] = `
"import { $$server as _$$server } from "use-server-directive/server";
const value = 'foo bar';
const _server = _$$server("/__server/bb5fd6ee-example-0-anonymous", async function () {
  try {
    await doStuff(value);
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});
foo: {
  const [_type, _result, _mutations] = await _server();
  if (_type === 4) {
    throw _result;
  }
}"
`;

exports[`LabeledStatement > server > should transform break statements 1`] = `
"import { $$server as _$$server } from "use-server-directive/server";
const _server = _$$server("/__server/bb5fd6ee-example-0-anonymous", async function () {
  try {
    if (cond()) {
      await doStuff(value);
    } else {
      return [0, "foo"];
    }
    await doMoreStuff();
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});
foo: {
  const [_type, _result, _mutations] = await _server();
  if (_type === 0) {
    if (_result === "foo") {
      break foo;
    }
  } else if (_type === 4) {
    throw _result;
  }
}"
`;

exports[`LabeledStatement > server > should transform valid server functions with scope 1`] = `
"import { $$server as _$$server } from "use-server-directive/server";
const _server = _$$server("/__server/bb5fd6ee-example-0-foo", async function () {
  try {
    await doStuff(value);
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});
async function foo() {
  const value = 'foo bar';
  foo: {
    const [_type, _result, _mutations] = await _server();
    if (_type === 4) {
      throw _result;
    }
  }
}"
`;

exports[`LabeledStatement > server > should transform valid server labeled statements 1`] = `
"import { $$server as _$$server } from "use-server-directive/server";
const _server = _$$server("/__server/bb5fd6ee-example-0-anonymous", async function () {
  try {
    await doStuff();
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});
foo: {
  const [_type, _result, _mutations] = await _server();
  if (_type === 4) {
    throw _result;
  }
}"
`;
